LPS-77911 Override quick-action-menu position to avoid overlap

--- a/modules/apps/web-experience/layout/layout-admin-web/src/main/resources/META-INF/resources/css/miller_columns/LayoutColumn.scss
+++ b/modules/apps/web-experience/layout/layout-admin-web/src/main/resources/META-INF/resources/css/miller_columns/LayoutColumn.scss
@@ -1,5 +1,9 @@
 @import "mixins";
 
+.layout-column .quick-action-menu {
+	position: static;
+}
+
 @include sm {
 	.layout-column {
 		height: calc(100vh - 384px);
